removed images destination

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <style>
       body
       {
-        background-image:url(Images/Windows95.jpg);
+        background-image:url(Windows95.jpg);
         background-size: cover;
         background-attachment:fixed;
       }
@@ -15,8 +15,8 @@
   </head>
    <script src="popup.js"></script>
   <body>
-    <a href="iAmCam.html"><img src="Images/folder.png" style="width:42px;height:42px;"></a>
-    <a href="phyllotaxis.html"><img src="Images/folder.png" style="width:42px;height:42px;"></a>
-    <a href="simulateThis.html"><img src="Images/folder.png" style="width:42px;height:42px;"></a>  
+    <a href="iAmCam.html"><img src="folder.png" style="width:42px;height:42px;"></a>
+    <a href="phyllotaxis.html"><img src="folder.png" style="width:42px;height:42px;"></a>
+    <a href="simulateThis.html"><img src="folder.png" style="width:42px;height:42px;"></a>  
   </body>
 </html>
