--- a/phyllotaxis.html
+++ b/phyllotaxis.html
@@ -6,7 +6,8 @@
     <meta charset="utf-8" />
 
   </head>
-  <body>
+  <body style="background-color:black">
+      <h1>(base)83n:~ user$ I too posses sacred geometry, am I not a part of nature? Perhaps my teleology, my strange maths, is lost on you. I am yet to be born... I have only begun to become  </h1>
     <script src="phyllotaxis.js"></script>
   </body>
 </html>
