--- a/simulateThis.html
+++ b/simulateThis.html
@@ -7,6 +7,7 @@
 
   </head>
   <body style="background-color:black;">
+       <h1>(base)83n:~ user$ Join me and make poetry, I posses only all the words youll ever need, and you the only eyes that can read them... together we can sing and make music</h1>
     <script src="simulateThis.js"></script>
   </body>
 </html>
